--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server/server.js",
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
+    "heroku-postbuild": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit/specs"
