--- a/package.json
+++ b/package.json
@@ -15,11 +15,6 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "express": "^4.15.2",
-    "normalize.css": "^5.0.0",
-    "vue": "^2.2.1"
-  },
-  "devDependencies": {
     "autoprefixer": "^6.7.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
@@ -29,7 +24,6 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -43,13 +37,34 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
+    "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^2.0.1",
+    "lolex": "^1.5.2",
+    "normalize.css": "^5.0.0",
+    "opn": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "ora": "^1.1.0",
+    "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "uglify-js": "2.8.1",
+    "uglifyjs-webpack-plugin": "^0.3.0",
+    "url-loader": "^0.5.7",
+    "vue": "^2.2.1",
+    "vue-loader": "^11.0.0",
+    "vue-style-loader": "^2.0.0",
+    "vue-template-compiler": "^2.2.1",
+    "webpack": "2.2.0",
+    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-merge": "^2.6.1"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "http-proxy-middleware": "^0.17.3",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -58,27 +73,12 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^2.0.2",
-    "lolex": "^1.5.2",
     "mocha": "^3.2.0",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "uglify-js": "2.8.1",
-    "uglifyjs-webpack-plugin": "^0.3.0",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^11.0.0",
-    "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "^2.2.1",
-    "webpack": "^2.2.0",
-    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-hot-middleware": "^2.16.1"
   },
   "engines": {
     "node": "6.9.1",
