--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "url-loader": "^0.5.7",
     "vue": "^2.2.1",
     "vue-loader": "^11.0.0",
+    "vue-resource": "^1.2.1",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.1",
     "webpack": "2.2.0",
