--- a/package.json
+++ b/package.json
@@ -40,10 +40,13 @@
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "^0.0.5-beta.2",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "inject-loader": "^2.0.1",
+    "less": "^2.3.1",
     "lolex": "^1.5.2",
     "normalize.css": "^5.0.0",
     "opn": "^4.0.2",
