--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "uglifyjs-webpack-plugin": "^0.3.0",
     "url-loader": "^0.5.7",
     "vue": "^2.2.1",
+    "vue-head": "^2.0.10",
     "vue-loader": "^11.0.0",
     "vue-resource": "^1.2.1",
     "vue-style-loader": "^2.0.0",
