--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
+    "fisher-yates": "^1.0.3",
     "font-awesome": "^4.7.0",
     "font-awesome-webpack": "^0.0.5-beta.2",
     "friendly-errors-webpack-plugin": "^1.1.3",
