Update package.json to reflect new name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-trivia",
+  "name": "trivia-js",
   "version": "1.0.0",
   "description": "A JavaScript trivia quiz",
   "author": "smonusbonus <simokrei@gmail.com>",
