--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "body-parser": "^1.17.1",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -49,6 +50,7 @@
     "inject-loader": "^2.0.1",
     "less": "^2.3.1",
     "lolex": "^1.5.2",
+    "mongodb": "^2.2.24",
     "normalize.css": "^5.0.0",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
