--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "http-proxy-middleware": "^0.17.3",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
+    "karma-fixture": "^0.2.6",
+    "karma-json-fixtures-preprocessor": "^0.0.6",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sinon-chai": "^1.2.4",
